# tribal_mcp_server

./: .bumpversion.cfg  .clinerules  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.mcp  README.md  VERSIONING.md  docker-compose.yml  instructions.md  mcp_server_tribal.code-workspace  pr_description.md  pr_description_migration_testing.md  pyproject.toml
.claude/: compact_history.md  compact_recent.md
.github/workflows/: hotfix.yml  python-app.yml  release.yml
docs/blog/: introducing-tribal.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: check_version_consistency.py  test-workflow.sh
src/examples/: __init__.py  api_client.py
src/learned_knowledge_mcp/: __init__.py  app.py  mcp_app.py  mcp_server.py
src/learned_knowledge_mcp/_scripts/: __init__.py
src/learned_knowledge_mcp/api/: __init__.py  auth.py
src/learned_knowledge_mcp/services/: storage_interface.py
src/learned_knowledge_mcp/utils/: text_processing.py
src/mcp_server_tribal/: __init__.py  app.py  mcp_app.py  mcp_server.py
src/mcp_server_tribal/_scripts/: __init__.py
src/mcp_server_tribal/api/: __init__.py  auth.py  errors.py
src/mcp_server_tribal/cli/: __init__.py  commands.py
src/mcp_server_tribal/models/: error_record.py
src/mcp_server_tribal/services/: auth.py  chroma_storage.py  migration.py  storage_interface.py
tests/: __init__.py  test_end_to_end.py
tests/integration/: __init__.py  test_migration_integration.py
tests/unit/: __init__.py  test_app.py  test_migration.py  test_migration_framework.py  test_models.py  test_version_consistency.py
(+8 files in other folders)
